// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the captured corpus > pins everything arena direct with boxes valued at nothing resolves to 1`] = `
"preset     Arena Direct (Play)
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":2}
entry      8000 gems / 0 gold
draft      6 packs @ 23
values     pack=22 playIn=200 playBox=0 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    8000.0 gems (984.9 gold/event)
payouts    0-0_0-0_0-0_3600-8_7200-16_10800-24_0-0-play.latest_0-0-play.latest-play.latest
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything arena direct — physical boxes in the ladder resolves to 1`] = `
"preset     Arena Direct (Cube)
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":2}
entry      8000 gems / 0 gold
draft      0 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    8000.0 gems (984.9 gold/event)
payouts    0-0_0-0_0-0_3600-8_7200-16_10800-24_0-0-play.spm_0-0-play.spm-play.msh
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything bankroll only resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=20000 gold=15000 maxEvents=200
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything bare origin resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything counts above the ceilings resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=2000
sim        trials=25000000 runs=999999 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything custom elimination shape resolves to 1`] = `
"preset     Custom
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":5,"maxLosses":2}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1354.8 gems (968.3 gold/event)
payouts    0-0_100-1_200-2_400-3_800-4_1600-5
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything custom ladder naming its boxes resolves to 1`] = `
"preset     Custom
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":3,"maxLosses":2}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1361.1 gems (926.3 gold/event)
payouts    0-0_0-0_0-0-play.msh_0-0-play.latest-collector.spm
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything demo 2 — premier, gems only, no gold resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 0
values     pack=0 playIn=0 playBox=0 collBox=0
gold       other=0/day over 1 events, goldPer10k=1500
charges    1426.7 gems (488.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=event unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything demo 3 — quick, gems only, no gold resolves to 1`] = `
"preset     Quick Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      750 gems / 5000 gold
draft      3 packs @ 0
values     pack=0 playIn=0 playBox=0 collBox=0
gold       other=0/day over 1 events, goldPer10k=1500
charges    676.7 gems (488.8 gold/event)
payouts    50-1.2_100-1.22_200-1.24_300-1.26_450-1.3_650-1.35_850-1.4_950-2
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=event unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything demo 4 — premier at the post's card values resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 110
values     pack=132 playIn=200 playBox=24288 collBox=91691
gold       other=0/day over 1 events, goldPer10k=1500
charges    1426.7 gems (488.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=event unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything demo 5 — full custom worst case resolves to 1`] = `
"preset     Custom
winRate    0.6125 over 100 matches
structure  {"kind":"rounds","rounds":5}
entry      1234 gems / 9000 gold
draft      4 packs @ 110
values     pack=132 playIn=250 playBox=60000 collBox=250000
gold       other=900/day over 2 events, goldPer10k=2000
charges    1131.2 gems (750.0 gold/event)
payouts    10-1_20-1_300-2-1_4000-3-play_5000-4-collector-collector_12000-6-4-collector-collector-collector
bankroll   gems=12000 gold=5000 maxEvents=50
sim        trials=250000 runs=10000 seed=77
display    tab=event unit=usd gemsPerUsd=350"
`;

exports[`the captured corpus > pins everything display only resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=about unit=usd gemsPerUsd=350"
`;

exports[`the captured corpus > pins everything mastery rates, cosmetics priced resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=mastery unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything mastery tab resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=mastery unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything one slider moved resolves to 1`] = `
"preset     Premier Draft
winRate    0.62 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1327.5 gems (1150.0 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything preset switch only resolves to 1`] = `
"preset     Quick Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      750 gems / 5000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    586.7 gems (1088.8 gold/event)
payouts    50-1.2_100-1.22_200-1.24_300-1.26_450-1.3_650-1.35_850-1.4_950-2
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything traditional draft — bo3, fixed rounds, play-in points resolves to 1`] = `
"preset     Traditional Draft
winRate    0.55 over 100 matches
structure  {"kind":"rounds","rounds":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1362.8 gems (915.0 gold/event)
payouts    0-1_250-1_1000-3_2500-6-2
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the captured corpus > pins everything unspent gold counted as worthless resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=0
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=arena-direct-collector resolves to 1`] = `
"preset     Arena Direct (Collector)
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":2}
entry      8000 gems / 0 gold
draft      6 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    8000.0 gems (984.9 gold/event)
payouts    0-0_0-0_0-0_3600-8_7200-16_10800-24_14400-32_0-0-collector.latest
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=arena-direct-cube resolves to 1`] = `
"preset     Arena Direct (Cube)
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":2}
entry      8000 gems / 0 gold
draft      0 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    8000.0 gems (984.9 gold/event)
payouts    0-0_0-0_0-0_3600-8_7200-16_10800-24_0-0-play.spm_0-0-play.spm-play.msh
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=arena-direct-play resolves to 1`] = `
"preset     Arena Direct (Play)
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":2}
entry      8000 gems / 0 gold
draft      6 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    8000.0 gems (984.9 gold/event)
payouts    0-0_0-0_0-0_3600-8_7200-16_10800-24_0-0-play.latest_0-0-play.latest-play.latest
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=contender-draft resolves to 1`] = `
"preset     Contender Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      3000 gems / 20000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    2836.7 gems (1088.8 gold/event)
payouts    0-0_0-0_0-0_1400-3_2800-6_3200-8_4200-14_7200-22
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=pick-two-draft resolves to 1`] = `
"preset     Pick Two Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":4,"maxLosses":2}
entry      900 gems / 6000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    757.2 gems (951.9 gold/event)
payouts    50-1_150-1_800-1_1000-2_1300-3
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=premier-cube-draft resolves to 1`] = `
"preset     Premier Cube Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      0 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-5_1800-6_2200-7
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=premier-draft resolves to 1`] = `
"preset     Premier Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1336.7 gems (1088.8 gold/event)
payouts    50-1_100-1_250-2_1000-2_1400-3_1600-4_1800-5_2200-6
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=quick-draft resolves to 1`] = `
"preset     Quick Draft
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      750 gems / 5000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    586.7 gems (1088.8 gold/event)
payouts    50-1.2_100-1.22_200-1.24_300-1.26_450-1.3_650-1.35_850-1.4_950-2
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=sealed resolves to 1`] = `
"preset     Sealed
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":7,"maxLosses":3}
entry      2000 gems / 0 gold
draft      6 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    2000.0 gems (1088.8 gold/event)
payouts    200-3_400-3_600-3_1200-3_1400-3_1600-3_2000-3_2200-3
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=traditional-cube-draft resolves to 1`] = `
"preset     Traditional Cube Draft
winRate    0.55 over 100 matches
structure  {"kind":"rounds","rounds":3}
entry      1500 gems / 10000 gold
draft      0 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1362.8 gems (915.0 gold/event)
payouts    0-1_250-1_1000-3_2500-5
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=traditional-draft resolves to 1`] = `
"preset     Traditional Draft
winRate    0.55 over 100 matches
structure  {"kind":"rounds","rounds":3}
entry      1500 gems / 10000 gold
draft      3 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    1362.8 gems (915.0 gold/event)
payouts    0-1_250-1_1000-3_2500-6-2
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;

exports[`the preset definitions are the contract > pins what ?preset=traditional-sealed resolves to 1`] = `
"preset     Traditional Sealed
winRate    0.55 over 100 matches
structure  {"kind":"elimination","maxWins":4,"maxLosses":2}
entry      2000 gems / 0 gold
draft      6 packs @ 23
values     pack=22 playIn=200 playBox=24288 collBox=91691
gold       other=600/day over 1 events, goldPer10k=1500
charges    2000.0 gems (951.9 gold/event)
payouts    200-1_500-2_1200-3_1800-4_2200-5
bankroll   gems=3000 gold=0 maxEvents=20
sim        trials=100000 runs=10000 seed=1
display    tab=bankroll unit=gems gemsPerUsd=200"
`;
